# SlotMachineSDL

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Game.cpp  Game.hpp  SlotMachine.cpp  SlotMachine.hpp  SlotSymbol.cpp  SlotSymbol.hpp  main.cpp
src/CAppSettings/: CAppSettings.cpp  CAppSettings.hpp
src/CAppSettings/AppConfig/: config.cfg
src/CSDLContext/: CSDLContext.cpp  CSDLContext.hpp
src/CustomTypes/: CMakeLists.txt  Percent.hpp  Range.hpp  RectangleProperties.hpp  Vector.hpp
src/FontManager/: FontManager.cpp  FontManager.hpp
src/ICommand/: CMakeLists.txt  CommandManager.hpp  ICommand.hpp  SpinCommand.hpp
src/Texture/: Texture.cpp  Texture.hpp
src/TextureManager/: TextureManager.cpp  TextureManager.hpp
